# signify

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  pubkey  seckey
build-aux/: arc4random.c.patch  update.sh
src/: Makefile.am  arc4random.c  bcrypt_pbkdf.c  explicit_bzero.c  missing.h  readpassphrase.c  signify.c  timingsafe_bcmp.c
test/: signify.sh
test/CVS/: Root
